<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                          android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:background="@color/toolbar">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:orientation="horizontal"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:background="@color/toolbar"
                      android:paddingTop="10dp"
                      android:paddingBottom="10dp"
                      android:gravity="center_vertical"
            >

            <Space
                android:layout_width="15dp"
                android:layout_height="1dp"/>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:orientation="horizontal"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:background="@drawable/search_input_wrapper"
                          android:padding="5dp">

                <Space
                    android:layout_width="5dp"
                    android:layout_height="1dp"/>

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/device_icon"
                    android:src="@drawable/icon_find"
                    android:scaleType="centerCrop"
                    />

                <EditText
                    android:hint="@string/find"
                    android:textColorHint="#B3B3B3"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:minWidth="400dp"
                    android:id="@+id/search_text_input"
                    android:textSize="20sp"
                    android:background="@drawable/search_text_input"
                    android:textColor="@color/black"
                    android:maxLines="1"
                    android:inputType="text"
                    />

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black"
                android:textSize="11sp"
                android:textAllCaps="true"
                android:background="@drawable/toolbar_button"
                android:id="@+id/search_next_button"
                android:drawableTop="@drawable/icon_find_next"
                android:text="@string/find_next" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:scaleType="fitXY"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/black"
                android:textSize="11sp"
                android:textAllCaps="true"
                android:background="@drawable/toolbar_button"
                android:id="@+id/search_previous_button"
                android:drawableTop="@drawable/icon_find_previous"
                android:text="@string/find_previous" />

        </LinearLayout>


    </HorizontalScrollView>

</merge>
